# deepseek-ocr.rs

./: .gitignore  Cargo.toml  cli.sh  paddle.sh  serve.sh  test_andorid.sh  test_android_deepseek.sh  webui.sh
crates/android/: Cargo.toml
crates/android/src/: engine.rs  lib.rs
crates/cli/src/: app.rs
crates/core/src/: cancellation.rs  inference.rs  lib.rs
crates/infer-deepseek/src/model/: mod.rs
crates/infer-paddleocr/src/: model.rs
crates/server/src/: generation.rs
scripts/: build-android.sh
